# deployer

./: deployer.cabal
src/: Main.hs
