name:                deployer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Michaelt293/deployer#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Thomas
maintainer:          Michaelt293@gmail.com
copyright:           2018 Michael Thomas
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable deployer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , turtle
                     , containers
                     , yaml
